Refactored ViewModels.